added contact as a separate page + created reservation page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My Brunch</title>
+  <title>Instant Grammable</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Free HTML Templates" name="keywords">
   <meta content="Free HTML Templates" name="description">
 
   <!-- Favicon -->
-  <!-- <link href="img/favicon.ico" rel="icon"> -->
+  <link href="./src/static/img/logo.png" rel="icon">
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -38,11 +38,7 @@
   <script src="src/static/lib/isotope/isotope.pkgd.min.js"></script>
   <script src="src/static/lib/lightbox/js/lightbox.min.js"></script>
 
-  <!-- Contact Javascript File -->
-  <!-- <script src="src/static/mail/jqBootstrapValidation.min.js"></script>
-  <script src="src/static/mail/contact.js"></script> -->
-
-  <!-- Template Javascript -->
+  <!-- Javascript -->
   <script src="src/static/js/main.js"></script>
 </body>
 
